task1/log/build_2025-01-09_14-56-15/ttbot_square/stdout_stderr.log
running egg_info
writing ../../build/ttbot_square/ttbot_square.egg-info/PKG-INFO
writing dependency_links to ../../build/ttbot_square/ttbot_square.egg-info/dependency_links.txt
writing entry points to ../../build/ttbot_square/ttbot_square.egg-info/entry_points.txt
writing requirements to ../../build/ttbot_square/ttbot_square.egg-info/requires.txt
writing top-level names to ../../build/ttbot_square/ttbot_square.egg-info/top_level.txt
reading manifest file '../../build/ttbot_square/ttbot_square.egg-info/SOURCES.txt'
writing manifest file '../../build/ttbot_square/ttbot_square.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/hans/ros2/task1/install/ttbot_square/lib/python3.10/site-packages/ttbot_square/circ_cont.py to circ_cont.cpython-310.pyc
  File "/home/hans/ros2/task1/install/ttbot_square/lib/python3.10/site-packages/ttbot_square/circ_cont.py", line 37
    def change_radius_callback(self,request,response)
                                                     ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/hans/ros2/task1/install/ttbot_square/lib/python3.10/site-packages/ttbot_square-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/ttbot_square/ttbot_square.egg-info to /home/hans/ros2/task1/install/ttbot_square/lib/python3.10/site-packages/ttbot_square-0.0.0-py3.10.egg-info
running install_scripts
Installing circle_controller script to /home/hans/ros2/task1/install/ttbot_square/lib/ttbot_square
Installing square_abin script to /home/hans/ros2/task1/install/ttbot_square/lib/ttbot_square
Installing square_controller_node script to /home/hans/ros2/task1/install/ttbot_square/lib/ttbot_square
writing list of installed files to '/home/hans/ros2/task1/build/ttbot_square/install.log'
